--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,18 +4,20 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-            "name": "Launch Chrome",
-            "request": "launch",
-            "type": "chrome",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}"
-        },
+        
+
         {
             "type": "chrome",
             "request": "launch",
             "name": "Open module1.html",
             "file": "c:\\Users\\jesli\\OneDrive\\Documents\\MBA\\MBA 544-Strategic Management\\studyguide\\Corporate-Strategy\\module1.html"
+        }   ,
+        {
+            "type": "chrome",
+            "request": "launch",
+            "name": "Corporate Strategy Hub",
+            "file": "c:\\Users\\jesli\\OneDrive\\Documents\\MBA\\MBA 544-Strategic Management\\studyguide\\Corporate-Strategy\\corporate_strategy_hub.html"
         }
+
     ]
 }
